Update source file en.json

--- a/front/app/translations/admin/en.json
+++ b/front/app/translations/admin/en.json
@@ -469,7 +469,7 @@
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.byTagsFilter": "By tag(s)",
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.contentEditorTitle": "Content",
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.editCustomPagePageTitle": "Edit custom page",
-  "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.linkedProjectsLabel": "Linked projects",
+  "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.linkedProjectsLabel": "Linked Projects",
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.linkedProjectsTooltip": "Select which projects and related events can be displayed on the page.",
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.messageCreatedSuccess": "Page successfully created",
   "app.containers.Admin.PagesAndMenu.containers.CreateCustomPage.messageEditSuccess": "Page successfully saved",
@@ -1376,12 +1376,12 @@
   "app.containers.AdminPage.SettingsPage.fieldTopicTitle": "Tag name",
   "app.containers.AdminPage.SettingsPage.fieldTopicTitleError": "Provide a tag name for all languages",
   "app.containers.AdminPage.SettingsPage.fieldTopicTitleTooltip": "The name you choose for each tag will be visible to the platform users",
-  "app.containers.AdminPage.SettingsPage.fixedRatio": "Fixed ratio",
+  "app.containers.AdminPage.SettingsPage.fixedRatio": "Fixed-ratio banner",
   "app.containers.AdminPage.SettingsPage.fixedRatioBannerTooltip": "This banner type works best with images that shouldn’t be cropped, such as images with text, a logo or specific elements that are crucial to your citizens. This banner is replaced with a solid box in the primary colour when users are signed in. You can set this colour in the general settings. More info on the recommended image usage can be found on our {link}.",
   "app.containers.AdminPage.SettingsPage.fixedRatioBannerTooltipLink": "knowledge base",
   "app.containers.AdminPage.SettingsPage.fixedRatioImageCropperInfo": "The banner is always cropped to a certain ratio to make sure all crucial aspects are on display at all times. The {link} for this banner type is 3:1.",
   "app.containers.AdminPage.SettingsPage.fixedRatioImageCropperInfoLink": "recommended ratio",
-  "app.containers.AdminPage.SettingsPage.fullWidthBannerLayout": "Full width",
+  "app.containers.AdminPage.SettingsPage.fullWidthBannerLayout": "Full-width banner",
   "app.containers.AdminPage.SettingsPage.fullWidthBannerTooltip": "This banner stretches over the full width for a great visual effect. The image will try to cover as much space as possible, causing it to not always be visible at all times. You can combine this banner with an overlay of any colour. More info on the recommended image usage can be found on our {link}.",
   "app.containers.AdminPage.SettingsPage.fullWidthBannerTooltipLink": "knowledge base",
   "app.containers.AdminPage.SettingsPage.header": "Homepage banner",
