include section description in schema + spec for second built-in section

--- a/back/spec/fixtures/locales/en.yml
+++ b/back/spec/fixtures/locales/en.yml
@@ -42,7 +42,7 @@ en:
         description:
       section2:
         title: Images and attachments
-        description:
+        description: Upload your favourite files here
       section3:
         title: Details
         description:
