--- a/back/spec/fixtures/locales/nl-NL.yml
+++ b/back/spec/fixtures/locales/nl-NL.yml
@@ -18,30 +18,30 @@ nl:
         title: Beschrijving
         description:
       author_id:
-        title: Author
+        title: Auteur
         description:
       topic_ids:
         title: Tags
         description:
       location:
-        title: Location
+        title: Locatie
         description:
       proposed_budget:
-        title: Proposed Budget
+        title: Voorgesteld budget
         description:
       budget:
-        title: Budget
+        title: Bedrag
         description:
       images:
-        title: Images
+        title: Afbeeldingen
         description:
       attachments:
-        title: Attachments
+        title: Bijlagen
         description:
       section1:
         description:
       section2:
-        title: Images and attachments
+        title: Afbeeldingen en bijlagen
         description:
       section3:
         title: Details
