[CL-2783] Revert automatic translation deletion from crowdin

--- a/front/app/translations/admin/de-DE.json
+++ b/front/app/translations/admin/de-DE.json
@@ -1152,8 +1152,90 @@
   "app.containers.AdminPage.ProjectEdit.snap_survey": "Snap Survey",
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Projektstatus",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Richten Sie Ihr Projekt ein und personalisieren Sie es.",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Seite",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Antwortmöglichkeit hinzufügen",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Umfrageinhalt",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Abbrechen",
+  "app.containers.AdminPage.ProjectEdit.survey.choiceCount": "{percentage}% ({choiceCount, plural, no {# Antworten} one {# Antwort} other {# Antworten}})",
+  "app.containers.AdminPage.ProjectEdit.survey.chooseMany": "Wählen Sie mehrere",
+  "app.containers.AdminPage.ProjectEdit.survey.chooseOne": "Wählen Sie eine Option",
+  "app.containers.AdminPage.ProjectEdit.survey.close": "Schließen",
+  "app.containers.AdminPage.ProjectEdit.survey.closed": "Geschlossen",
+  "app.containers.AdminPage.ProjectEdit.survey.confirmDeleteButtonText": "Ja, Umfrageergebnisse löschen",
+  "app.containers.AdminPage.ProjectEdit.survey.confirmDeleteFieldWithLogicButtonText": "Ja, Seite löschen",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Ja, zurück ohne zu speichern",
+  "app.containers.AdminPage.ProjectEdit.survey.content": "Inhalt",
+  "app.containers.AdminPage.ProjectEdit.survey.default": "Standard",
+  "app.containers.AdminPage.ProjectEdit.survey.delete": "Löschen",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteButtonLabel": "Löschen",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteFieldWithLogicConfirmationQuestion": "Wenn Sie diese Seite löschen, wird auch die damit verbundene Logik gelöscht. Sind Sie sicher, dass Sie sie löschen wollen?",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteResultsInfo": "Dies kann nicht rückgängig gemacht werden",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteResultsLink": "Löschen Sie die Ergebnisse, wenn Sie Änderungen vornehmen müssen.",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteSurveyResults": "Umfrageergebnisse löschen",
+  "app.containers.AdminPage.ProjectEdit.survey.deleteSurveyResultsConfirmation": "Sind Sie sicher, dass Sie alle Umfrageergebnisse löschen möchten?",
+  "app.containers.AdminPage.ProjectEdit.survey.disabledSurveyMessage": "Der Inhalt der Umfrage kann nicht mehr bearbeitet werden, da die ersten Umfrageergebnisse bereits vorliegen.",
+  "app.containers.AdminPage.ProjectEdit.survey.done": "Fertig",
+  "app.containers.AdminPage.ProjectEdit.survey.downloadAllResults": "Alle Umfrageergebnisse herunterladen",
+  "app.containers.AdminPage.ProjectEdit.survey.downloadResults": "Umfrageergebnisse herunterladen",
+  "app.containers.AdminPage.ProjectEdit.survey.editButtonLabel": "Bearbeiten",
+  "app.containers.AdminPage.ProjectEdit.survey.editSurveyContent": "Inhalt der Umfrage bearbeiten",
+  "app.containers.AdminPage.ProjectEdit.survey.emptyOptionError": "Geben Sie mindestens 1 Antwortmöglichkeit an",
+  "app.containers.AdminPage.ProjectEdit.survey.emptyTitleError": "Geben Sie einen Fragentitel an",
+  "app.containers.AdminPage.ProjectEdit.survey.errorMessage": "Es gibt ein Problem. Bitte beheben Sie das Problem, damit Sie Ihre Änderungen speichern können",
+  "app.containers.AdminPage.ProjectEdit.survey.fieldLabel": "Antwortmöglichkeiten",
+  "app.containers.AdminPage.ProjectEdit.survey.fileUpload": "Dateien hochladen",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.labels": "Beschriftungen",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.labelsTooltipContent": "Wählen Sie optionale Beschriftungen für Ihre Mindest- und Höchstwerte.",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.page.description": "Beschreibung (optional)",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.page.title": "Titel (optional)",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.selectRangeTooltip": "Wählen Sie den Höchstwert für Ihre Skala.",
+  "app.containers.AdminPage.ProjectEdit.survey.formBuilder.toLabel": "bis",
+  "app.containers.AdminPage.ProjectEdit.survey.goToPageInputLabel": "Die nächste Seite ist dann:",
+  "app.containers.AdminPage.ProjectEdit.survey.informationText": "Die Antworten auf die Fragen mit kurzen und langen Antworten sind derzeit nur im Download der Umfrage verfügbar",
+  "app.containers.AdminPage.ProjectEdit.survey.invalidLogicBadgeMessage": "Ungültige Logik",
+  "app.containers.AdminPage.ProjectEdit.survey.linearScale": "Lineare Skala",
+  "app.containers.AdminPage.ProjectEdit.survey.linear_scale": "Lineare Skala",
+  "app.containers.AdminPage.ProjectEdit.survey.logic": "Logik",
+  "app.containers.AdminPage.ProjectEdit.survey.logicValidationError": "Logik darf nicht auf vorherige Seiten verlinken",
+  "app.containers.AdminPage.ProjectEdit.survey.longAnswer": "Lange Antwort",
+  "app.containers.AdminPage.ProjectEdit.survey.multipleChoice": "Mehrfachauswahl",
+  "app.containers.AdminPage.ProjectEdit.survey.multiselectText": "Mehrfachauswahl - wählen Sie mehrere aus",
+  "app.containers.AdminPage.ProjectEdit.survey.newField": "Neues Feld",
+  "app.containers.AdminPage.ProjectEdit.survey.nextPageLabel": "Weiter:",
+  "app.containers.AdminPage.ProjectEdit.survey.noSurveyResponses": "Noch keine Umfrageantworten",
+  "app.containers.AdminPage.ProjectEdit.survey.number": "Zahl",
+  "app.containers.AdminPage.ProjectEdit.survey.open": "Geöffnet",
+  "app.containers.AdminPage.ProjectEdit.survey.openForResponses": "Umfrage geöffnet",
+  "app.containers.AdminPage.ProjectEdit.survey.optional": "Optional",
+  "app.containers.AdminPage.ProjectEdit.survey.page": "Seite",
+  "app.containers.AdminPage.ProjectEdit.survey.pageRuleLabel": "Die nächste Seite ist:",
+  "app.containers.AdminPage.ProjectEdit.survey.pagesLogicHelperText": "Wenn keine Logik hinzugefügt wird, folgt die Umfrage ihrem normalen Ablauf. Weitere Informationen finden Sie auf {supportPageLink}",
+  "app.containers.AdminPage.ProjectEdit.survey.question": "Frage",
+  "app.containers.AdminPage.ProjectEdit.survey.questionDescriptionOptional": "Beschreibung der Frage (optional)",
+  "app.containers.AdminPage.ProjectEdit.survey.questionLogicHelperText": "Wenn einer Antwort keine Logik hinzugefügt wird, folgt die Umfrage ihrem normalen Ablauf. Wenn Sie einer Frage eine Logik hinzufügen, wird sie standardmäßig erforderlich. Weitere Informationen finden Sie auf {supportPageLink}",
+  "app.containers.AdminPage.ProjectEdit.survey.questionTitle": "Titel der Frage",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Änderungen werden nicht gespeichert.",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Bereich",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Antwort entfernen",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Erforderlich",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Frage erforderlich?",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Wenn die Antwort lautet:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Speichern",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Multiple Choice - wählen Sie eins aus",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Kurze Antwort",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Einfachauswahl",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Umfrage erfolgreich gespeichert",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Erstellen und bearbeiten Sie die Fragen der Umfrage dieses Projekts.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Ende der Umfrage",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Umfrageergebnisse",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/de/articles/6673873-erstellen-einer-plattforminternen-umfrage",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "diese Seite",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Umfrage",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Umfrage",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Insgesamt {count} Antwort(en)",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Umfrage ansehen",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Umfrageergebnisse anzeigen ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Umfrage ansehen",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "URL einbetten",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Umfragetool",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Weitere Informationen zum Einbetten einer Umfrage finden Sie {surveyServiceTooltipLink}.",
