--- a/front/app/translations/admin/en-CA.json
+++ b/front/app/translations/admin/en-CA.json
@@ -1152,10 +1152,35 @@
   "app.containers.AdminPage.ProjectEdit.snap_survey": "Snap Survey",
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Project status",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Set up and personalize your project.",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Page",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Add answer",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Add survey content",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Cancel",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Cancel",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Yes, i want to leave",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "Are you sure you want to leave?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Current change won’t be saved",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Range",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Remove answer",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Required",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Make answering this question required",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "If answer is:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Save",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Multiple choice - choose one",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Short answer",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Single choice",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Survey successfully saved",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Create and edit the questions in this projects's survey, and view the results.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Survey end",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Survey results",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "this page",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Survey",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Total {count} responses",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "View survey",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "View survey results ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "View survey",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "Embed URL",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Service",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "You can find more information on how to embed a survey {surveyServiceTooltipLink}.",
