Revert "Translations updated by CI (extract-intl)"
This reverts commit 79ffa759beb575a6c2dd6c62b13b9be74fbb6976.

--- a/front/app/translations/admin/da-DK.json
+++ b/front/app/translations/admin/da-DK.json
@@ -1160,10 +1160,34 @@
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Projektstatus",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Opsæt og personliggør din projekt.",
   "app.containers.AdminPage.ProjectEdit.supportPageLinkText": "besøg vores supportcenter",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Side",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Tilføj svar",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Tilføj indhold til undersøgelsen",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Annuller",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Ja, jeg ønsker at forlade",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "Er du sikker på, at du vil rejse?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Den aktuelle ændring vil ikke blive gemt",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Område",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Fjern svar",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Påkrævet",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Gør besvarelse af dette spørgsmål obligatorisk",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Hvis svaret er:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Gem",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Flere valg - vælg et",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Kort svar",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Enkelt valg",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Undersøgelsen er gemt med succes",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Opret og rediger spørgsmålene i denne projektundersøgelse.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Undersøgelse slut",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Resultater af undersøgelsen",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "denne side",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Spørgeundersøgelse",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Spørgeundersøgelse",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Samlede {count} svar",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Se undersøgelse",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Se undersøgelsesresultater ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Se undersøgelse",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "Indlejre URL",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Service",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Du kan finde flere information om, hvordan du indlejrer en undersøgelse {surveyServiceTooltipLink}.",
