--- a/front/app/translations/admin/es-ES.json
+++ b/front/app/translations/admin/es-ES.json
@@ -1160,10 +1160,35 @@
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Estado del proyecto",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Configurar y personalizar tu proyecto.",
   "app.containers.AdminPage.ProjectEdit.supportPageLinkText": "visite nuestro centro de soporte",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Página",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Añadir respuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Añadir el contenido de la encuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Cancelar",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Cancelar",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Sí, quiero salir",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "¿Está seguro de que quiere salir?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "El cambio actual no se guardará",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Rango",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Eliminar respuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Obligatorio",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Hacer obligatoria la respuesta a esta pregunta",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Si la respuesta es:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Guardar",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Elección múltiple - elegir uno",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Respuesta corta",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Una sola opción",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Encuesta guardada con éxito",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Crear y editar las preguntas de la encuesta de este proyecto.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Fin de la encuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Resultados de la encuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "esta página",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Consulta",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Consulta",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Total de {count} respuestas",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Ver encuesta",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Ver resultados de la encuesta ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Ver encuesta",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "URL incrustada",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Servicio",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Elegir qué herramienta de encuesta desea incrustar. Toda la información se encuentra a {surveyServiceTooltipLink}.",
