--- a/front/app/translations/admin/pl-PL.json
+++ b/front/app/translations/admin/pl-PL.json
@@ -1160,10 +1160,35 @@
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Status projektu",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Skonfiguruj i spersonalizuj Twój projekt.",
   "app.containers.AdminPage.ProjectEdit.supportPageLinkText": "visit our support center",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Strona",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Dodaj odpowiedź",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Dodaj treść ankiety",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Anuluj",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Anuluj",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Tak, chcę wyjść",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "Jesteś pewien, że chcesz wyjść?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Obecna zmiana nie zostanie zapisana",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Zakres",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Usuń odpowiedź",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Wymagane",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Make answering this question required",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Jeśli odpowiedź brzmi:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Zapisz",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Wybór wielokrotny - wybierz jedną",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Krótka odpowiedź",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Jeden wybór",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Ankieta została pomyślnie zapisana",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Tworzenie i edycja pytań w ankiecie projektu.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Koniec ankiety",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Wyniki",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "this page",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Ankieta",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Ankieta",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Ogółem {count} odpowiedzi",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Zobacz ankietę",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Zobacz wyniki ankiety ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Zobacz ankietę",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "Zamieść URL",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Dostawca ankiety",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Możesz znaleźć więcej informacji na temat zamieszczania ankiet na {surveyServiceTooltipLink}.",
