--- a/front/app/translations/admin/nl-NL.json
+++ b/front/app/translations/admin/nl-NL.json
@@ -1160,10 +1160,35 @@
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Status van het project",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Maak je project aan en personaliseer het.",
   "app.containers.AdminPage.ProjectEdit.supportPageLinkText": "bekijk onze supportpagina",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Pagina",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Voeg antwoord toe",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Enquête-inhoud toevoegen",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Annuleer",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Annuleer",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Ja, ik wil vertrekken",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "Weet u zeker dat u wilt vertrekken?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Huidige wijziging wordt niet opgeslagen",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Bereik",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Antwoord verwijderen",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Vereist",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Maak het beantwoorden van deze vraag verplicht",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Als het antwoord is:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Opslaan",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Meerkeuze - kies één",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Kort antwoord",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Eén keuze",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Enquête succesvol opgeslagen",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Maak en bewerk de vragen in de enquête van dit project.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Einde enquête",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Enquêteresultaten",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "deze pagina",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Enquête",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Enquête",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "In totaal {count} antwoorden",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Enquête bekijken",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Bekijk enquêteresultaten ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Enquête bekijken",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "Embed URL",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Programma",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Bepaal welk enquêteprogramma je wil gebruiken. Je vindt alle informatie {surveyServiceTooltipLink}.",
