--- a/front/app/translations/admin/sr-Latn.json
+++ b/front/app/translations/admin/sr-Latn.json
@@ -1160,10 +1160,35 @@
   "app.containers.AdminPage.ProjectEdit.statusLabel": "Status projekta",
   "app.containers.AdminPage.ProjectEdit.subtitleGeneral": "Podesite i personalizujte vaš projekat",
   "app.containers.AdminPage.ProjectEdit.supportPageLinkText": "poseti naš centar za podršku",
+  "app.containers.AdminPage.ProjectEdit.survey.Page": "Stranica",
+  "app.containers.AdminPage.ProjectEdit.survey.addAnswer": "Dodaj odgovor",
+  "app.containers.AdminPage.ProjectEdit.survey.addSurveyContent": "Dodaj sadržaj ankete",
+  "app.containers.AdminPage.ProjectEdit.survey.cancelDeleteButtonText": "Prekid",
   "app.containers.AdminPage.ProjectEdit.survey.cancelQuitButtonText": "Prekid",
   "app.containers.AdminPage.ProjectEdit.survey.confirmQuitButtonText": "Da, želim da napustim",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportConfirmationQuestion": "Želite li zaista da napustite?",
   "app.containers.AdminPage.ProjectEdit.survey.quitReportInfo": "Trenutna promena neće biti sačuvana",
+  "app.containers.AdminPage.ProjectEdit.survey.range": "Opseg",
+  "app.containers.AdminPage.ProjectEdit.survey.removeAnswer": "Ukloni odgovor",
+  "app.containers.AdminPage.ProjectEdit.survey.required": "Obavezno",
+  "app.containers.AdminPage.ProjectEdit.survey.requiredToggleLabel": "Obeleži odgovor na ovo pitanje kao obavezan",
+  "app.containers.AdminPage.ProjectEdit.survey.ruleForAnswerLabel": "Ako je odgovor:",
+  "app.containers.AdminPage.ProjectEdit.survey.save": "Sačuvajte",
+  "app.containers.AdminPage.ProjectEdit.survey.selectText": "Višestruki izbor - izaberi jedan",
+  "app.containers.AdminPage.ProjectEdit.survey.shortAnswer": "Kraći odgovor",
+  "app.containers.AdminPage.ProjectEdit.survey.singleChoice": "Jedan izbor",
+  "app.containers.AdminPage.ProjectEdit.survey.successMessage": "Anketa je uspešno sačuvana",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyDescription": "Kreirajte i uređujte pitanja u anketi ovog projekta.",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyEnd": "Kraj ankete",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyResults": "Rezultati ankete",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticle": "https://support.citizenlab.co/en/articles/6673873-creating-an-in-platform-survey",
+  "app.containers.AdminPage.ProjectEdit.survey.surveySupportArticleLinkText": "ova stranica",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyText": "Upitnik",
+  "app.containers.AdminPage.ProjectEdit.survey.surveyTitle": "Upitnik",
+  "app.containers.AdminPage.ProjectEdit.survey.totalSurveyResponses": "Ukupno {count} odgovora",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurvey": "Pregled ankete",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyResults": "Preuzmi rezultate ankete ({count})",
+  "app.containers.AdminPage.ProjectEdit.survey.viewSurveyText": "Pregled ankete",
   "app.containers.AdminPage.ProjectEdit.surveyEmbedUrl": "Umetnite URL",
   "app.containers.AdminPage.ProjectEdit.surveyService": "Servis",
   "app.containers.AdminPage.ProjectEdit.surveyServiceTooltip": "Možete pronaći više informacija o integraciji ankete {surveyServiceTooltipLink}.",
