--- a/cl2-component-library/src/components/LateralScrollControls/lateralScrollControls.stories.mdx
+++ b/cl2-component-library/src/components/LateralScrollControls/lateralScrollControls.stories.mdx
@@ -14,7 +14,7 @@ import Box from '../Box';
 
 <Canvas>
   <Story name="default">
-    <LateralScrollControls>
+    <LateralScrollControls containerRef={undefined}>
       <Box
         display="flex"
         width="200px"
