--- a/cl2-component-library/src/components/LateralScrollControls/lateralScrollControls.stories.mdx
+++ b/cl2-component-library/src/components/LateralScrollControls/lateralScrollControls.stories.mdx
@@ -25,6 +25,7 @@ import Box from '../Box';
         overflow="auto"
         overflowX="scroll"
         py='24px'
+        ref={undefined}
       >
         <Box width='200px'>Element 1</Box>
         <Box width='200px'>Element 2</Box>
