--- a/back/spec/fixtures/locales/en.yml
+++ b/back/spec/fixtures/locales/en.yml
@@ -58,6 +58,8 @@ en:
       section3:
         title: Details
         description:
+      other:
+        title: Type your answer
   custom_forms:
     categories:
       main_content:
