--- a/front/app/translations/en.json
+++ b/front/app/translations/en.json
@@ -1245,6 +1245,7 @@
   "app.containers.NotificationMenu.userMarkedPostAsSpam1": "{name} reported \"{postTitle}\" as spam",
   "app.containers.NotificationMenu.userReactedToYourComment": "{name} reacted to your comment",
   "app.containers.NotificationMenu.userReportedCommentAsSpam1": "{name} reported a comment on \"{postTitle}\" as spam",
+  "app.containers.NotificationMenu.nativeSurveyNotSubmitted": "You didn't submit your survey",
   "app.containers.NotificationMenu.votingBasketNotSubmitted": "You didn't submit your votes",
   "app.containers.NotificationMenu.votingBasketSubmitted": "You voted successfully",
   "app.containers.NotificationMenu.votingLastChance": "Last chance to vote for {phaseTitle}",
