[TAN-820] Added email reminder for incomplete surveys

--- a/back/engines/free/email_campaigns/config/locales/en.yml
+++ b/back/engines/free/email_campaigns/config/locales/en.yml
@@ -507,12 +507,11 @@ en:
       cta_see_votes_submitted: 'See votes submitted'
       cta_message: 'Click the button below to participate'
     native_survey_not_submitted:
-      subject: '%{organizationName}: You didn''t submit your survey response'
-      preheader: 'You didn''t submit your survey response on the participation platform of %{organizationName}'
-      title_native_survey_not_submitted: 'You didn''t submit your survey response'
-      event_description: 'You answered a few questions for %{contextTitle} but you didn''t submit your response.'
-      cta_message: 'Click the button below to complete your survey response'
-      cta_complete_your_survey_response: 'Complete your survey response'
+      subject: '%{organizationName}: Almost there! Submit your answers'
+      preheader: 'You didn''t complete your survey response on the participation platform of %{organizationName}'
+      title_native_survey_not_submitted: 'Almost there! Submit your answers'
+      body_native_survey_not_submitted: 'You started sharing your answers on %{phaseTitle} but didn''t submit them. Submissions close on %{phaseEndDate}. Click on the button below to continue where you left off.'
+      cta_complete_your_survey_response: 'Resume your survey response'
     voting_basket_not_submitted:
       subject: '%{organizationName}: You didn''t submit your votes'
       preheader: 'You didn''t submit your votes on the participation platform of %{organizationName}'
