--- a/back/engines/commercial/smart_groups/config/locales/en.yml
+++ b/back/engines/commercial/smart_groups/config/locales/en.yml
@@ -44,8 +44,8 @@ en:
       is_not_project: "Does not follow project %{value}"
       is_one_of_folders: "Follows one of the following folders %{value}"
       is_not_folder: "Does not follow folder %{value}"
-      is_one_of_ideas: "Follows one of the following ideas %{value}"
-      is_not_idea: "Does not follow idea %{value}"
+      is_one_of_inputs: "Follows one of the following inputs %{value}"
+      is_not_input: "Does not follow input %{value}"
       is_one_of_topics: "Follows one of the following topics %{value}"
       is_not_topic: "Does not follow topic %{value}"
       is_one_of_areas: "Follows one of the following areas %{value}"
