--- a/back/config/locales/en.yml
+++ b/back/config/locales/en.yml
@@ -332,9 +332,7 @@ en:
   user:
     anon_first_name: "User"
     anon_scheme:
-      animal:
-        first_names: 'Pink,Green,Purple,Blue,Yellow'
-        last_names: 'Aardvark,Lion,Platypus,Giraffe,Zebra'
+      animals: 'Aardvark,Lion,Platypus,Giraffe,Zebra'
   time:
     am: am
     formats:
