--- a/back/spec/fixtures/locales/fr-FR.yml
+++ b/back/spec/fixtures/locales/fr-FR.yml
@@ -82,9 +82,7 @@ fr:
   user:
     anon_first_name: "Utilisateur"
     anon_scheme:
-      animal:
-        first_names: 'Rose,Vert,Violet,Bleu,Jaune'
-        last_names: 'Oryctérope,Lion,Ornithorynque,Girafe,Zèbre'
+      animals: 'Oryctérope,Chat,Ornithorynque,Girafe,Zèbre'
   xlsx_export:
     anonymous: 'Anonyme'
     column_headers:
